Перевод статусов на русский и фикс ошибки в подробностях курсанта

--- a/MigrationService/Views/Aircraft/Index.cshtml
+++ b/MigrationService/Views/Aircraft/Index.cshtml
@@ -10,7 +10,7 @@
         <input type="text" name="search" value="@ViewData["Search"]" class="form-control" placeholder="Поиск по бортовому/модели" />
     </div>
     <div class="col-md-3">
-        <input type="text" name="status" value="@ViewData["Status"]" class="form-control" placeholder="Статус (например, Available)" />
+        <input type="text" name="status" value="@ViewData["Status"]" class="form-control" placeholder="Статус (например, Доступен)" />
     </div>
     <div class="col-md-6">
         <button type="submit" class="btn btn-primary">Фильтровать</button>
