--- a/MigrationService/Views/Shared/_Layout.cshtml
+++ b/MigrationService/Views/Shared/_Layout.cshtml
@@ -32,7 +32,8 @@
                                 <li><a class="dropdown-item" asp-controller="Aircraft" asp-action="Index">Самолеты</a></li>
                                 <li><a class="dropdown-item" asp-controller="Courses" asp-action="Index">Курсы</a></li>
                                 <li><a class="dropdown-item" asp-controller="Exams" asp-action="Index">Экзамены</a></li>
-                                <li><a class="dropdown-item" asp-controller="Certificates" asp-action="Index">Сертификаты</a></li>
+                                <li><a class="dropdown-item" asp-controller="StudentCertificates" asp-action="Index">Сертификаты</a></li>
+                                <li><a class="dropdown-item" asp-controller="Certificates" asp-action="Index">Шаблоны сертификатов</a></li>
                             </ul>
                         </li>
                     </ul>
