--- a/MigrationService/Views/Lessons/Create.cshtml
+++ b/MigrationService/Views/Lessons/Create.cshtml
@@ -71,7 +71,7 @@
     </div>
     <div class="mb-3">
         @Html.LabelFor(m => m.Status)
-        @Html.DropDownListFor(m => m.Status, new SelectList(new[] {"Planned","InProgress","Completed","Approved","Cancelled"}), "Выберите статус...", new { @class = "form-select" })
+        @Html.DropDownListFor(m => m.Status, new SelectList(new[] { "Запланировано", "В процессе", "Завершено", "Одобрено", "Отменено" }), "Выберите статус...", new { @class = "form-select" })
         @Html.ValidationMessageFor(m => m.Status, "", new { @class = "text-danger" })
     </div>
     <div class="mb-3">
